# BIFROST

./: .gitignore  Example-Fibers.ipynb  README.md  Untitled.ipynb  Utils.py  fibers.py  pyproject.toml  test_fibers.py
.ipynb_checkpoints/: Example-Fibers-checkpoint.ipynb  Untitled1-checkpoint.ipynb
Papers/Phys Rev Applied 2025/: Figure6_Data.csv  Notebook.ipynb  README.md  fibers.py
Papers/Phys Rev Applied 2025/.ipynb_checkpoints/: Figure6_Data-checkpoint.csv  Notebook-checkpoint.ipynb
Papers/Phys Rev Applied 2025/Figure8_Data/: CompensationAngle.csv  CompensationVectors0.csv  CompensationVectors1.csv  CompensationVectors2.csv  CompensationVectors3.csv  CompensationVectors4.csv
bifrost/: __init__.py  bifrost.py  plotting.py  utils.py
bifrost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_bifrost.py
