[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost"
version = "0.1.0"
description = "Birefringence in Fiber: Research and Optical Simulation Toolkit"
readme = "README.md"
authors = [{name = "Patrick Banner", email = "pbanner1@swarthmore.edu"}]
license = "GPL-3.0-only"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "plotly==6.1.0",
    "scipy==1.15.3",
    "py-pol==1.1.3"
]  # List any required packages here

[project.urls]
"Homepage" = "https://github.com/JQIamo/BIFROST"
"Bug Tracker" = "https://github.com/JQIamo/BIFROST/issues"