[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost"
version = "0.1.0"
description = "Birefringence in Fiber: Research and Optical Simulation Toolkit"
readme = "README.md"
authors = [{name = "Patrick Banner", email = "pbanner1@swarthmore.edu"}]
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy==2.2.6",
    "scipy==1.15.3",
]  # List any required packages here
[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.3",
    "py-pol==1.1.3",
    "plotly==6.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bifrost*"]
exclude = ["Papers*", "tests*"]

[project.urls]
"Homepage" = "https://github.com/JQIamo/BIFROST"
"Bug Tracker" = "https://github.com/JQIamo/BIFROST/issues"